# gtk-rs-composite-template

./: .gitignore  Cargo.toml  INFO.md  README..md  README.md  build.rs  info.txt  install_schema.cmd  org.my_gtk_app.MyGtkApp.gschema.xml
resources/: menus.ui  resources.gresource.xml  style.css  window.ui
src/: main.rs  org.my_gtk_app.MyGtkApp.gschema.xml
src/custom_button/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
