[package]
name = "my_gtk_app"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_7"] }
aes-gcm = "0.10.3"
# async-channel = "2.4.0"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }

[build-dependencies]
glib-build-tools = "0.20.0"
